# Taro

./: .gitignore  Cargo.toml  Makefile  README.md  test_inferred_deref.tr
compiler/: Cargo.toml
compiler-cli/: Cargo.toml
compiler-cli/src/: command.rs  lib.rs
compiler-cli/src/command/: build.rs  check.rs  incremental.rs  new.rs  run.rs  std_attached.rs  test.rs
compiler-cli/src/package/: git.rs  integrity.rs  lockfile.rs  manifest.rs  mod.rs  sync.rs  utils.rs
compiler/src/: ast.rs  ast_lowering.rs  cfg.rs  cfg_eval.rs  compile.rs  constants.rs  diagnostics.rs  error.rs  hir.rs  ide.rs  interner.rs  lib.rs  package.rs  span.rs
compiler/src/codegen/: abi.rs  link.rs  llvm.rs  mangle.rs  mod.rs  target.rs
compiler/src/codegen/llvm/: existentials.rs  intrinsics.rs  normalize.rs  rc.rs  witness.rs
compiler/src/compile/: config.rs  context.rs  entry.rs  global.rs  mod.rs  state.rs  test_collector.rs
compiler/src/metadata/: mod.rs  wire.rs
compiler/src/mir/: builder.rs  layout.rs  mod.rs  package.rs  pretty.rs  validate.rs
compiler/src/mir/analysis/: dominators.rs  liveness.rs  mod.rs
compiler/src/mir/builder/: block.rs  statement.rs
compiler/src/mir/optimize/: alloc_escape.rs  async_transform.rs  coalesce.rs  copy_modifiers.rs  devirtualize.rs  dse.rs  escape.rs  inline.rs  mod.rs  passes.rs  propagate.rs  simplify.rs  validate.rs
compiler/src/package/: discover.rs  lockfile.rs  manifest.rs  mod.rs  readonly.rs  utils.rs
compiler/src/parse/: lexer.rs  mod.rs  parser.rs  token.rs
compiler/src/sema/: error.rs  mod.rs  models.rs  resolve.rs  std_items.rs
compiler/src/sema/impl_engine/: candidate.rs  canonical.rs  goal.rs  mod.rs  select.rs  witness.rs
compiler/src/sema/resolve/: arena.rs  define.rs  full.rs  models.rs  resolver.rs  scope_lookup.rs  tag.rs  usage.rs
compiler/src/sema/tycheck/: constraints.rs  derive.rs  fold.rs  freshen.rs  mod.rs  results.rs
compiler/src/sema/validate/: mod.rs  printf.rs
compiler/src/specialize/: collect.rs  instance.rs  mod.rs  resolve.rs
compiler/src/thir/: match_tree.rs  mod.rs  package.rs  pattern.rs  synthesize.rs
compiler/src/thir/passes/: exhaustiveness.rs  flow.rs  mod.rs
compiler/src/utils/: intern.rs
compiler/taroc/: Cargo.toml
compiler/taroc/src/: main.rs
compiler/taroc_ast/: Cargo.toml
compiler/taroc_ast/src/: adt.rs  attribute.rs  block.rs  declaration.rs  expression.rs  function.rs  generics.rs  lib.rs  literal.rs  local.rs  package.rs  path.rs  pattern.rs  statement.rs  ty.rs  visibility.rs
compiler/taroc_ast_ir/: Cargo.toml
compiler/taroc_ast_ir/src/: lib.rs  operator.rs
compiler/taroc_ast_lowering/: Cargo.toml
compiler/taroc_ast_lowering/src/: adt.rs  attributes.rs  declaration.rs  expression.rs  function.rs  generics.rs  lib.rs  literal.rs  local.rs  package.rs  path.rs  pattern.rs  statement.rs  types.rs  utils.rs
compiler/taroc_ast_passes/: Cargo.toml
compiler/taroc_ast_passes/src/: expand.rs  lib.rs
compiler/taroc_constants/: Cargo.toml
compiler/taroc_constants/src/: lib.rs
compiler/taroc_context/: Cargo.toml
compiler/taroc_context/src/: context.rs  lib.rs  models.rs  session.rs
compiler/taroc_data_structures/: Cargo.toml
compiler/taroc_data_structures/src/: intern.rs  lib.rs
compiler/taroc_diagnostics/: Cargo.toml
compiler/taroc_diagnostics/src/: lib.rs
compiler/taroc_driver/: Cargo.toml
compiler/taroc_driver/src/: arguments.rs  lib.rs
compiler/taroc_driver/src/command/: build.rs  mod.rs
compiler/taroc_error/: Cargo.toml
compiler/taroc_error/src/: lib.rs
compiler/taroc_hir/: Cargo.toml
compiler/taroc_hir/src/: adt.rs  attribute.rs  block.rs  declaration.rs  definition.rs  expression.rs  function.rs  generics.rs  label.rs  lib.rs  literal.rs  local.rs  nodeid.rs  package.rs  path.rs  pattern.rs  statement.rs  ty.rs  visibility.rs  visitor.rs
compiler/taroc_hir_passes/: Cargo.toml
compiler/taroc_hir_passes/src/: lib.rs
compiler/taroc_lexer/: Cargo.toml
compiler/taroc_lexer/src/: lib.rs
compiler/taroc_mir/: Cargo.toml
compiler/taroc_mir/src/: lib.rs
compiler/taroc_package/: Cargo.toml
compiler/taroc_package/src/: config.rs  git.rs  graph.rs  identifier.rs  lib.rs  lockfile.rs  manifest.rs  sync.rs
compiler/taroc_parse/: Cargo.toml
compiler/taroc_parse/src/: adt.rs  attribute.rs  block.rs  declaration.rs  expression.rs  function.rs  generics.rs  identifier.rs  lib.rs  mod.rs  package.rs  path.rs  pattern.rs  restrictions.rs  sequence.rs  span.rs  statement.rs  ty.rs  utils.rs  visibility.rs
compiler/taroc_resolve/: Cargo.toml
compiler/taroc_resolve/src/: alias.rs  arena.rs  define.rs  extend.rs  find.rs  full.rs  generics.rs  iterative.rs  lib.rs  models.rs  paths.rs  resolver.rs  tag.rs  usage.rs
compiler/taroc_resolve_models/: Cargo.toml
compiler/taroc_resolve_models/src/: lib.rs
compiler/taroc_sema/: Cargo.toml
compiler/taroc_sema/src/: lib.rs
compiler/taroc_sema/src/check/: expectation.rs  gather.rs  mod.rs  pass.rs  wf.rs
compiler/taroc_sema/src/coerce/: mod.rs
compiler/taroc_sema/src/collect/: conformance.rs  constraints.rs  fields.rs  function.rs  generics.rs  header.rs  mod.rs
compiler/taroc_sema/src/conformance/: mod.rs
compiler/taroc_sema/src/context/: context.rs  models.rs  session.rs
compiler/taroc_sema/src/error/: mod.rs
compiler/taroc_sema/src/extend/: alias.rs  identify.rs  members.rs  mod.rs  table.rs
compiler/taroc_sema/src/fold/: mod.rs
compiler/taroc_span/: Cargo.toml
compiler/taroc_span/src/: file.rs  lib.rs  map.rs  session.rs  span.rs  symbol.rs
compiler/taroc_thir/: Cargo.toml
compiler/taroc_thir/src/: lib.rs
compiler/taroc_thir_build/: Cargo.toml
compiler/taroc_thir_build/src/: lib.rs
compiler/taroc_token/: Cargo.toml
compiler/taroc_token/src/: lib.rs  operator.rs
compiler/taroc_ty/: Cargo.toml
compiler/taroc_ty/src/: lib.rs
compiler/taroc_ty_check/: Cargo.toml
compiler/taroc_ty_check/src/: analysis.rs  collect.rs  full.rs  lib.rs  lower.rs  models.rs  utils.rs
compiler/taroc_types/: Cargo.toml
compiler/taroc_types/src/: lib.rs
std/src/: lib.tr
(+935 files in other folders)
