[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
compiler = { path = "../compiler" }
fs_extra = "1.3.0"
git2 = "0.20.0"
petgraph = "0.7.1"
rustc-hash = "2.1.1"
semver = { version = "1.0.26", features = ["serde"] }
sha2 = "0.10.8"
toml = "0.8.20"
ecow = { version = "0.2.6", features = ["serde"] }
blake3 = "1.8.2"
internment = { version = "0.8.6", features = ["arena", "serde"] }
