[package]
name = "compiler"
version = "0.1.0"
edition = "2024"

[features]
nightly = []

[dependencies]
bitflags = "2.9.4"
ecow = "0.2.6"
index_vec = "0.1.4"
rustc-hash = "2.1.1"
colored = "3.0.0"
indexmap = "2.8.0"
typed-arena = "2.0.2"
internment = { version = "0.8.6", features = ["arena", "serde"] }
ena = "0.14.3"
bumpalo = "3.17.0"
serde = { version = "1.0.219", features = ["derive"] }
inkwell = { version = "0.7.0", default-features = false, features = ["llvm16-0"] }
