[package]
name = "taroc_context"
version = "0.1.0"
edition = "2024"


[dependencies]
taroc_package = { path = "../taroc_package" }
taroc_span = { path = "../taroc_span" }
taroc_hir = { path = "../taroc_hir" }
taroc_ty = { path = "../taroc_ty" }
taroc_diagnostics = { path = "../taroc_diagnostics" }
taroc_resolve_models = { path = "../taroc_resolve_models" }
taroc_data_structures = { path = "../taroc_data_structures" }
rustc-hash = "2.1.1"
bumpalo = "3.17.0"
