[package]
name = "taroc_hir_passes"
version = "0.1.0"
edition = "2024"

[dependencies]
taroc_span = { path = "../taroc_span" }
taroc_error = { path = "../taroc_error" }
taroc_resolve = { path = "../taroc_resolve" }
taroc_hir = { path = "../taroc_hir" }
taroc_package = { path = "../taroc_package" }
taroc_sema = { path = "../taroc_sema" }
taroc_thir_build = { path = "../taroc_thir_build" }
