[package]
name = "taroc_package"
version = "0.1.0"
edition = "2024"

[dependencies]
fs_extra = "1.3.0"
git2 = "0.20.0"
petgraph = "0.7.1"
rustc-hash = "2.1.1"
semver = { version = "1.0.26", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.8"
taroc_constants = { path = "../taroc_constants" }
taroc_error = { path = "../taroc_error" }
toml = "0.8.20"
