[package]
name = "taroc_parse"
version = "0.1.0"
edition = "2024"

[dependencies]
taroc_span = { path = "../taroc_span" }
taroc_error = { path = "../taroc_error" }
taroc_sema = { path = "../taroc_sema" }
taroc_token = { path = "../taroc_token" }
taroc_constants = { path = "../taroc_constants" }
taroc_ast = { path = "../taroc_ast" }
taroc_lexer = { path = "../taroc_lexer" }
taroc_ast_ir = { path = "../taroc_ast_ir" }
bitflags = "2.9.0"
