[package]
name = "taroc_resolve"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
taroc_span = { path = "../taroc_span" }
taroc_error = { path = "../taroc_error" }
taroc_hir = { path = "../taroc_hir" }
taroc_context = { path = "../taroc_context" }
taroc_constants = { path = "../taroc_constants" }
taroc_package = { path = "../taroc_package" }
taroc_data_structures = { path = "../taroc_data_structures" }
taroc_resolve_models = { path = "../taroc_resolve_models" }
bumpalo = "3.17.0"
rustc-hash = "2.1.1"
