[package]
name = "taroc_resolve_models"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
taroc_span = { path = "../taroc_span" }
taroc_hir = { path = "../taroc_hir" }
taroc_data_structures = { path = "../taroc_data_structures" }
taroc_error = { path = "../taroc_error" }
rustc-hash = "2.1.1"
indexmap = "2.8.0"
