[package]
name = "taroc_sema"
version = "0.1.0"
edition = "2024"

[dependencies]
taroc_span = { path = "../taroc_span" }
taroc_error = { path = "../taroc_error" }
taroc_hir = { path = "../taroc_hir" }
taroc_token = { path = "../taroc_token" }
rustc-hash = "2.1.1"
index_vec = "0.1.4"
smallvec = "1.15.0"
petgraph = "0.7.1"
taroc_data_structures = { path = "../taroc_data_structures" }
bumpalo = "3.17.0"
taroc_resolve_models = { path = "../taroc_resolve_models" }
taroc_package = { path = "../taroc_package" }
taroc_ast_ir = { path = "../taroc_ast_ir" }
indexmap = "2.8.0"
taroc_diagnostics = { path = "../taroc_diagnostics" }
