[package]
name = "taroc_ty"
version = "0.1.0"
edition = "2024"

[dependencies]
taroc_span = { path = "../taroc_span" }
taroc_error = { path = "../taroc_error" }
taroc_hir = { path = "../taroc_hir" }
taroc_data_structures = { path = "../taroc_data_structures" }
taroc_token = { path = "../taroc_token" }
rustc-hash = "2.1.1"
indexmap = "2.8.0"
index_vec = "0.1.4"
