[package]
name = "taroc_ty_check"
version = "0.1.0"
edition = "2024"

[dependencies]
taroc_span = { path = "../taroc_span" }
taroc_error = { path = "../taroc_error" }
taroc_hir = { path = "../taroc_hir" }
taroc_types = { path = "../taroc_types" }
taroc_context = { path = "../taroc_context" }
rustc-hash = "2.1.1"
