[package]
name = "taroc_ty_check"
version = "0.1.0"
edition = "2024"

[dependencies]
taroc_span = { path = "../taroc_span" }
taroc_error = { path = "../taroc_error" }
taroc_hir = { path = "../taroc_hir" }
taroc_ty = { path = "../taroc_ty" }
taroc_context = { path = "../taroc_context" }
taroc_token = { path = "../taroc_token" }
rustc-hash = "2.1.1"
index_vec = "0.1.4"
smallvec = "1.15.0"
